tests/sksl/errors/golden/FieldAfterRuntimeArray.glsl
### Compilation failed:

error: 1: arrays without an explicit size must use an initializer expression
error: 2: initializers are not permitted on interface block fields
error: 2: only the last entry in an interface block may be a runtime-sized array
3 errors
